# sortedcontainers-pydantic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  example.py  justfile  pyproject.toml  sortedcontainers_pydantic.py  tests.py
.github/workflows/: release.yml  tests.yml
sortedcontainers_pydantic/: __init__.py
tests/: test_sortedcontainers_pydantic.py  typechecks.py
